# langchain-book

chapter-1/: .gitignore  pyproject.toml
chapter-1/src/chapter_1/: chat_model.ipynb  fake_llm.ipynb  lcel.ipynb
chapter-3/: .gitignore  pyproject.toml
chapter-3/src/chapter_3/: error_handling.ipynb  langgraph_intro.ipynb  output-parser.ipynb
chapter-4/: 01_embeddings_and_vectorstores.ipynb  02_document_processing.ipynb.ipynb  requirements.txt
